kubernetes/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: hello-nginx
spec:
  type: NodePort
  selector:
    app: hello-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
