kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-app-service
  namespace: default
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
